# stan2d

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.claude/: settings.local.json
docs/: 2d-physics-engine-design.md  PROGRESS.md
docs/plans/: 2026-03-09-phase1-implementation.md
docs/superpowers/plans/: 2026-03-11-phase2-task13-joint-infrastructure.md  2026-03-11-phase2-task14-hinge-joint-solver.md  2026-03-11-phase2-task15-distance-joint-solver.md  2026-03-11-phase2-task16-spring-joint-solver.md
docs/superpowers/specs/: 2026-03-11-phase2-joint-constraints-design.md
docs/tasks/: task_02_core_math_types.md  task_03_sparseset.md  task_04_shaperegistry.md  task_05_bodystorage_world_basics.md  task_06_integrator_symplectic_euler.md  task_08_narrow_phase_shape_pair_collision_detection.md  task_11_state_system_view_snapshot.md
docs/tasks/phase1/: 00_master_plan.md  task_01_project_scaffolding.md  task_07_broad_phase_dynamic_aabb_tree.md  task_09_constraint_solver_sequential_impulse.md  task_10_world_step_pipeline_wiring.md  task_12_trajectory_recorder_state_export.md
docs/tasks/phase2/: phase2-task17-pulley-joint-solver.md  phase2-task18-joint-state-system.md
include/stan2d/collision/: aabb_tree.hpp  contact.hpp  narrow_phase.hpp
include/stan2d/constraints/: contact_constraint.hpp  solver.hpp
include/stan2d/core/: handle.hpp  math_types.hpp  shape_registry.hpp  shapes.hpp  sparse_set.hpp
include/stan2d/dynamics/: body_storage.hpp  integrator.hpp
include/stan2d/export/: state_export.hpp  trajectory_recorder.hpp
include/stan2d/joints/: joint_solver.hpp  joint_storage.hpp  (+1 more)
tests/integration/: test_step_pipeline.cpp
tests/unit/: test_aabb_tree.cpp  test_distance_joint.cpp  test_hinge_joint.cpp  test_integrator.cpp  test_joint_infrastructure.cpp  test_joint_state_system.cpp  test_math_types.cpp  test_narrow_phase.cpp  test_pulley_joint.cpp  test_shape_registry.cpp  test_smoke.cpp  test_solver.cpp  test_sparse_set.cpp  test_spring_joint.cpp  test_state_export.cpp  test_state_system.cpp  test_trajectory_recorder.cpp  test_world_basics.cpp
(+9 files in other folders)
